--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,14 +1,23 @@
 .page {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: var(--box-color);
+  background-color: var(--main-green);
   color: #333;
   text-align: center;
 }
 
+.page h2 {
+  color: var(--main-white);
+  font-size: 70px;
+}
 
+.page p {
+  color: var(--main-white);
+}
 
+.page a {
+  color: var(--main-white);
+}
