--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,25 +1,19 @@
 :root {
-
   /* Global Variables */
-  --main-color: #f1f1f1;
-
-  /* Component Specific Variables */
-  --box-color: #fff;
+  --main-white: #f1f1f1;
+  --main-green: #0a3d3d;
+  --main-darkGreen: #111f22;
+  --main-yellw: #fad7a0;
 }
 
 @media (prefers-color-scheme: dark) {
-
   :root {
-    
-    /* Global Variables */
-    --main-color: #333;
-
-
-    /* Component Specific Variables */
-    --box-color: rgb(235, 235, 160);
-
+    /* Global Variables - DARK MODE */
+    --main-white: #f1f1f1;
+    --main-green: #0a3d3d;
+    --main-darkGreen: #111f22;
+    --main-yellw: #fad7a0;
   }
-
 }
 
 * {
@@ -30,20 +24,13 @@
 
 html,
 body {
-  background-color: var(--main-color);
-}
-
-body {
-  background-color: var(--main-color);
-  ;
+  background-color: var(--main-green);
 }
 
 a {
   color: inherit;
   text-decoration: underline;
 }
-
-
 
 @media (prefers-color-scheme: dark) {
   html {
