--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,13 @@
 .page {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  padding : 20px;
+  padding: 20px;
 }
 
-
-
+.page h2 {
+  color: var(--main-white);
+  font-size: 90px;
+}
