--- a/src/components/boilerplate/boilerbox.module.css
+++ b/src/components/boilerplate/boilerbox.module.css
@@ -1,22 +1,26 @@
-
-
 .boilerbox {
-   
-    padding: 40px 40px;
-    border-radius: 20px;
-    background-color: var(--box-color);
-    color: #000;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    box-shadow: 0px 3px 6px #00000029;
-    min-width: 300px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+
+  min-width: 300px;
+  padding: 50px 50px;
+  border-radius: 20px;
+  background-color: var(--main-darkGreen);
+
+  text-align: center;
+  color: var(--main-white);
+
+  gap: 40px;
+  box-shadow: 0px 3px 6px #00000029;
 }
 
-.boilerbox img { 
-
-    width: 100%;
-
+.boilerbox > div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
+.boilerbox img {
+  width: 100%;
+}
