--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 :root {
-  /* Global Variables */
+  /* Global Variables - LIGHT MODE */
   --main-white: #f1f1f1;
   --main-green: #0a3d3d;
   --main-darkGreen: #111f22;
